Fix lists on Safari

--- a/_sass/_Breadcrumb.sass
+++ b/_sass/_Breadcrumb.sass
@@ -16,6 +16,7 @@ ul.breadcrumb
     margin-left: 0
     &::before
       content: '/'
+      position: relative
   li:last-child
       a
         pointer-events: none
