--- a/_sass/_List.sass
+++ b/_sass/_List.sass
@@ -19,7 +19,10 @@ ol
 	list-style: decimal inside
 
 ul
-	list-style-type: "-"
 	li
-		padding-left: 1rem
-		margin-left: 1rem
+		padding-left: 2rem
+		position: relative
+		&:before
+			position: absolute
+			content: "-"
+			left: 0
